# notion-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: secrets.toml.example
lib/: auth.py  chat_logger.py  core.py
pages/: admin.py  chatbot.py
scripts/: sync.py
src/api/: main.py
src/api/routes/: chat.py  settings.py  sync.py
src/config/: settings.py
src/indexer/: chunker.py  embedder.py  image_processor.py  vector_store.py
src/notion/: client.py  loader.py  models.py
src/rag/: chain.py  prompts.py  retriever.py
src/ui/: app.py
